[package]
name = "grrs"
version = "0.1.0"
authors = ["jarone <jarone@vip.qq.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to search files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
